Minor code cleanups to address issues reported by Checkstyle and Findbugs.